# Dzaleka-Metadata-Standard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
dms/: __init__.py  cli.py  converter.py  diff.py  exporter.py  generator.py  report.py  schema.py  search.py  stats.py  sync.py  taxonomy.py  validator.py  web.py
dms/data/schema/: dms.json  dms.jsonld  dms.yaml
dms/data/taxonomy/: types.json
dms/templates/: index.html
docs/: best-practices.md  field-guide.md  getting-started.md  semantic-tagging.md  taxonomy-api.md
examples/: audio.json  batch.csv  document.json  event.json  mural.json  photo.json  poem.json  site.json  story.json
records/: story_6a6acdad.json
schema/: dms.json
tests/: test_converter.py  test_taxonomy.py  test_validator.py  test_web_taxonomy.py
tests/fixtures/: invalid_record.json  valid_record.json
